// Copyright Google Inc. Apache 2.0.

#include <stdio.h>  // for remove
#include <string.h>  // for memset
#include <unistd.h>  // for usleep

#include <gmock/gmock.h>
#include <google/protobuf/text_format.h>
#include <gtest/gtest.h>

#include "gmock_utils.h"
#include "mpeg2ts.pb.h"
#include "mpeg2ts_parser.h"

class TestableMpeg2TsParser : public Mpeg2TsParser {
 public:
  TestableMpeg2TsParser() : Mpeg2TsParser(true) {}
};

class Mpeg2TsParserTest : public ::testing::Test {
 protected:
  void SetUp() override {
  }

  void TearDown() override {
  }

  TestableMpeg2TsParser mpeg2ts_parser_;
};

// TODO(chema): add some tests. Really.

TEST_F(Mpeg2TsParserTest, SimpleTest) {
  EXPECT_EQ(0, 0);
}

static const char kMpeg2TsPacketWithPacketPayload[] = R"EOF(
packet: 0
byte: 0
parsed {
  header {
    transport_error_indicator: false
    payload_unit_start_indicator: true
    transport_priority: true
    pid: 290
    transport_scrambling_control: 2
    adaptation_field_exists: false
    payload_exists: true
    continuity_counter: 0
  }
  psi_packet {
    pointer_field: "E\"\317\313\331\001.\361n._I\253\376\227\202\310\344\262F\312\307_\342\032\202"
    other_psi_section {
      table_id: 108
      remaining: "\246\017\317\3329\022\353Q\370\262TJ\316K\024Mn}\027\207\271\202\262X\376\021\214\344\311\035E\334\204\262-n\025&\036\362;M\007wB\335B\252\035\270\245T$i,\035\005K\257\025G\275w\0012D\243\035\201\t9\001\224\306\372\013\371\036\014\002\016-*\266\240\021I9Mv\200\327\371\335.\322\016\t\210\355\311\267\231\244\326\244>\347\026\363W\251MK\3371\362|\333\263Kv\260\207\307\t\277RY\262\264\357\217\2609\272\317EC\320\353\003\211tw`f\033\205\2173\215\327\357\353c"
    }
  }
}
)EOF";

TEST_F(Mpeg2TsParserTest, ProtobufPackets) {
  struct protobuf_start_test {
    int line;
    const char *pb;
  } test_arr[] = {
    {__LINE__, kMpeg2TsPacketWithPacketPayload},
  };

  uint8_t buf[MPEG_TS_PACKET_SIZE];

  for (const auto &test_item : test_arr) {
    // parse pb packet
    Mpeg2Ts mpeg2ts;
    EXPECT_TRUE(google::protobuf::TextFormat::ParseFromString(
        test_item.pb, &mpeg2ts))
        << "line " << test_item.line;
    // dump it to binary
    EXPECT_EQ(MPEG_TS_PACKET_SIZE,
        mpeg2ts_parser_.DumpPacket(mpeg2ts, buf, MPEG_TS_PACKET_SIZE))
        << "line " << test_item.line;
    // parse it back to pb
    Mpeg2Ts mpeg2ts_from_binary;
    mpeg2ts_parser_.ParsePacket(0, 0, buf, MPEG_TS_PACKET_SIZE,
        &mpeg2ts_from_binary);
    EXPECT_THAT(mpeg2ts, EqualsProto(mpeg2ts_from_binary))
        << "line " << test_item.line;
  }
}

const uint8_t mpts_pat_header[] = {
  0x47, 0x40, 0x00, 0x11, 0x00, 0x00, 0xb0, 0x29, 0x02, 0xa4, 0xf3, 0x00,
  0x00, 0x00, 0x00, 0xef, 0xfe, 0x00, 0x02, 0xe0, 0x29, 0x00, 0x03, 0xe0,
  0x69, 0x00, 0x97, 0xe0, 0x40, 0x00, 0x04, 0xe0, 0xa9, 0x00, 0x05, 0xe0,
  0xc9, 0x00, 0x06, 0xe0, 0xe9, 0x00, 0x07, 0xe1, 0x29, 0xb9, 0x72, 0x43,
  0xb8, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
  0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
  0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
  0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
  0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
  0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
  0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
  0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
  0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
  0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
  0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
  0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff
};

unsigned char s1_00057d98_ts[] = {
  0x47, 0x60, 0x91, 0xd2, 0x4e, 0x49, 0xa7, 0x21, 0xe6, 0x54, 0xb3, 0xcb,
  0x7a, 0xb3, 0xc1, 0x04, 0x5c, 0xc7, 0x5a, 0x0d, 0x2e, 0xb5, 0x77, 0x93,
  0xa8, 0x63, 0x72, 0x1a, 0xe9, 0xd9, 0xc9, 0xd1, 0x23, 0x71, 0xc5, 0x2b,
  0x42, 0xfc, 0x36, 0x5d, 0xe1, 0xae, 0x85, 0xfc, 0xb9, 0x65, 0x37, 0xff,
  0x32, 0x49, 0x79, 0xaa, 0xb8, 0x43, 0xef, 0xe0, 0xe5, 0x1a, 0xc0, 0x6e,
  0xb2, 0x5d, 0x9a, 0x88, 0x57, 0x35, 0xc3, 0x79, 0x78, 0x60, 0x71, 0x72,
  0x36, 0xee, 0x0d, 0x48, 0x83, 0x20, 0xc7, 0x4e, 0x29, 0xc4, 0x48, 0xff,
  0xa0, 0x0e, 0x2d, 0xd2, 0xe6, 0x19, 0xe5, 0xcf, 0xcd, 0x56, 0xc1, 0x2b,
  0xf5, 0xdf, 0xaa, 0x80, 0xc4, 0x1c, 0x8a, 0xcd, 0x99, 0x27, 0x51, 0x3f,
  0x3c, 0xc8, 0x4c, 0x4f, 0xa5, 0xd8, 0xd5, 0xdd, 0xd2, 0xfb, 0x39, 0xcc,
  0x5b, 0x6f, 0xab, 0xe9, 0x2c, 0x9f, 0xb2, 0x39, 0x23, 0x47, 0xac, 0xfd,
  0x5a, 0x17, 0x30, 0x98, 0xb2, 0x8e, 0x01, 0x4c, 0x83, 0xc5, 0x57, 0x1f,
  0x60, 0x0a, 0xf6, 0x33, 0x08, 0xfc, 0x59, 0x2c, 0xfa, 0x5c, 0x69, 0x21,
  0x40, 0xbc, 0xb4, 0x9a, 0x7f, 0x4c, 0x76, 0xd7, 0x07, 0x81, 0x6c, 0x33,
  0xd4, 0xd7, 0x30, 0x2f, 0xe0, 0xfe, 0x26, 0xdd, 0xb9, 0x9d, 0x8f, 0xc6,
  0xff, 0xd3, 0x6a, 0xea, 0xd7, 0x52, 0x6e, 0x3e
};

unsigned char s1_000b5060_ts[] = {
  0x47, 0x60, 0x91, 0xd7, 0x2a, 0xb6, 0x97, 0x78, 0xd4, 0x1f, 0x7a, 0xf3,
  0x40, 0x0b, 0x0a, 0x7f, 0x73, 0x05, 0xd3, 0x24, 0x4e, 0xde, 0xbc, 0x2a,
  0x5f, 0x7d, 0xdd, 0xa0, 0x62, 0x9d, 0x59, 0x70, 0x14, 0xeb, 0x87, 0x4c,
  0x29, 0x00, 0x08, 0x70, 0x14, 0x67, 0x07, 0x40, 0x25, 0xaf, 0x9b, 0xff,
  0x8b, 0xeb, 0xdc, 0xb8, 0xad, 0x7f, 0xdd, 0xff, 0x52, 0x99, 0x4c, 0x8e,
  0xe5, 0xc3, 0xdc, 0x89, 0xee, 0xe0, 0x4d, 0xa9, 0x7e, 0xd0, 0xbc, 0x82,
  0x7a, 0x0e, 0x80, 0x0f, 0x63, 0x88, 0xa8, 0x7b, 0x2d, 0x60, 0x7f, 0x94,
  0xa2, 0x20, 0x8e, 0x62, 0x45, 0xae, 0x2a, 0x21, 0x82, 0xce, 0x0e, 0xb1,
  0xc7, 0xf5, 0x0d, 0x16, 0xc6, 0x3c, 0x33, 0x9b, 0xdd, 0x56, 0xb5, 0x29,
  0xd3, 0x5d, 0x76, 0x53, 0x40, 0xd5, 0xd1, 0xb5, 0xe4, 0xf0, 0x79, 0x70,
  0x54, 0xd6, 0x71, 0x22, 0xdc, 0x7a, 0x8b, 0x41, 0x80, 0xaa, 0xb2, 0x4d,
  0x59, 0xdf, 0xf1, 0x39, 0xee, 0xc7, 0x66, 0x7d, 0xe3, 0x13, 0xa5, 0x3e,
  0xcd, 0x4d, 0xf9, 0x97, 0xb7, 0x47, 0xc0, 0xde, 0xfb, 0x45, 0x85, 0xd3,
  0x7d, 0x78, 0xfc, 0x67, 0x9c, 0xb4, 0xde, 0x63, 0xa6, 0xbf, 0xef, 0x72,
  0x19, 0x41, 0xb4, 0xbc, 0xff, 0xa6, 0xfc, 0xdc, 0x16, 0xc5, 0x15, 0x8b,
  0x11, 0x04, 0x76, 0x47, 0xf0, 0x03, 0xa6, 0x29
};

TEST_F(Mpeg2TsParserTest, BinaryPackets) {
  struct binary_start_test {
    int line;
    const uint8_t *buf;
  } test_arr[] = {
    {__LINE__, mpts_pat_header},
    {__LINE__, s1_00057d98_ts},
    {__LINE__, s1_000b5060_ts},
  };

  uint8_t buf[MPEG_TS_PACKET_SIZE];

  for (const auto &test_item : test_arr) {
    // parse binary packet to pb
    Mpeg2Ts mpeg2ts;
    mpeg2ts_parser_.ParsePacket(0, 0, test_item.buf, MPEG_TS_PACKET_SIZE,
        &mpeg2ts);

    // dump the pb back to binary
    EXPECT_EQ(MPEG_TS_PACKET_SIZE,
        mpeg2ts_parser_.DumpPacket(mpeg2ts, buf, MPEG_TS_PACKET_SIZE))
        << "line " << test_item.line;
    EXPECT_EQ(0, memcmp(buf, test_item.buf, MPEG_TS_PACKET_SIZE))
        << "line " << test_item.line;
  }
}


int main(int argc, char **argv) {
  ::testing::InitGoogleTest(&argc, argv);
  return RUN_ALL_TESTS();
}
